# finbench

./: .gitignore  CLAUDE.md  PORJECT.md  README.md  preds_27b.json  preds_9b.json  pyproject.toml
benchmark/PyPortfolioOpt-pr-14/: task.json
benchmark/PyPortfolioOpt-pr-172/: task.json
benchmark/PyPortfolioOpt-pr-174/: task.json
benchmark/PyPortfolioOpt-pr-22/: task.json
benchmark/PyPortfolioOpt-pr-227/: task.json
benchmark/PyPortfolioOpt-pr-228/: task.json
benchmark/PyPortfolioOpt-pr-261/: task.json
benchmark/PyPortfolioOpt-pr-268/: task.json
benchmark/PyPortfolioOpt-pr-29/: task.json
benchmark/PyPortfolioOpt-pr-335/: task.json
benchmark/PyPortfolioOpt-pr-55/: task.json
benchmark/alphalens-cross-sectional-ic/: task.json
benchmark/alphalens-lookahead-forward-returns/: task.json
benchmark/bt-pr-140/: task.json
benchmark/bt-pr-234/: task.json
benchmark/bt-pr-382/: task.json
benchmark/bt-pr-484/: task.json
benchmark/bt-pr-511/: task.json
benchmark/empyrical-annualized-sharpe/: task.json
benchmark/empyrical-corporate-action-adjustment/: task.json
benchmark/ffn-pr-127/: task.json
finbench/: __init__.py  builder.py  cli.py  diffutils.py  evaluator.py  github_client.py  harvest.py  mutation.py  pipeline.py  providers.py  repos.yaml  schema.py  validator.py
finbench/agents/: __init__.py  (+2 more)
results/: LEADERBOARD.md  REPORT.md
scripts/: verify_in_docker.py
tests/: test_agents.py  test_builder.py  test_diffutils.py  test_evaluator.py  test_harvest.py  test_mutation.py  test_pipeline.py  test_providers.py  test_schema.py  test_validator.py
(+26 files in other folders)
